--- a/views/result.ejs
+++ b/views/result.ejs
@@ -23,7 +23,7 @@
 	<div class="l-col form-box__form">
 	<form id="menu" class=""  method="post">
 		<h1> Menú </h1>
-		<input type="text" name="menuAction" style="display:none;">
+		<input id="menuAction"type="text" name="menuAction" style="display:none;">
 		<button id="llistat" class="button">Listado</button>
 		<button id="crea" class="button">Crear</button>
 		<button id="busca" class="button">Buscar/Gestionar</button>
