--- a/public/Style/menuStyle.css
+++ b/public/Style/menuStyle.css
@@ -22,7 +22,7 @@
   background-color: rgba(255, 255, 255, 0.5);
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 0.25em;
-  margin-bottom: 1em;
+  margin-bottom: 0.2em;
 }
 .form__field:focus {
   outline: 0;
@@ -73,7 +73,7 @@ form {
   background-color: rgba(5, 127, 148);
   border-radius: 0.25em;
   padding: 1em;
-  margin-bottom: 1em;
+  margin-top: 1em;
 }
 
 .info-msg,
@@ -105,5 +105,76 @@ body {
   background-position: center top;
   color: #888;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  line-height: 1.75;
+  line-height: 0.8;
+}
+p {
+    color:black;
+    display: block;
+    margin-block-start: 0.2em;
+    margin-block-end: 0.2em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;  font-size:15px;
+
+}
+.searchRadio{
+  font-size:12px;
+  color:black;
+
+}
+
+/* Estilo de los radio Buttons*/
+.container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+.container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+.container input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.container .checkmark:after {
+  top: 9px;
+  left: 9px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white;
 }
