--- a/views/result.ejs
+++ b/views/result.ejs
@@ -12,11 +12,10 @@
 <div class="hidden-msg" style="display:none">
 	<% if (msg=="OK"){ %>
 	<label id="just-ok">Registro añadido correctamente</label>
-	<%}else if(msg="KO"){%>
+	<%}else if(msg=="KO"){%>
 	<label id="just-ko">ERROR: No se pudo insertar</label>
-
+	<%}else if(msg==""||msg=="First"){%>
 <%}else{%>
-<label id="error-message">ERROR: <%=msg %></label>
 <%}%>
 </div>
 <div class="central-div">
